opam-version: "2.0"
name: "coq-gitrees"
synopsis: "Guarded Interaction Trees"
version: "dev"
maintainer: "..."
authors: "..."
license: "BSD"
build: [make "-j%{jobs}%"]
install: [make "install"]
remove: ["rm" "-rf" "%{lib}%/coq/user-contrib/gitrees"]
depends: [
  "coq-equations" { (= "1.3+8.17") }
  "coq-iris" { (= "dev.2023-06-30.0.7e865892") }
  "coq-iris-heap-lang" { (= "dev.2023-06-30.0.7e865892") }
  "coq-stdpp" { (= "dev.2023-06-01.0.d1254759") }
  "coq" { (>= "8.17") | (= "dev") }
]
