opam-version: "2.0"
name: "coq-gitrees"
synopsis: "Guarded Interaction Trees"
version: "dev"
maintainer: "..."
authors: "..."
license: "BSD"
build: [make "-j%{jobs}%"]
install: [make "install"]
remove: ["rm" "-rf" "%{lib}%/coq/user-contrib/gitrees"]
depends: [
  "coq-equations" { (= "1.3+8.17") }
  "coq-iris" { (= "4.1.0") }
  "coq-iris-heap-lang" { (= "4.1.0") }
  "coq-stdpp" { (= "1.9.0") }
  "coq" { (>= "8.17") | (= "dev") }
]
